2005-07-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
	versions.

2005-07-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/install-sh: Use IFS=/ to split directories on /, don't translate
	/ into % as it prevents directory names using %...

2005-07-09  Stepan Kasal  <kasal@ucw.cz>

	* doc/automake.texi (Public macros): Typo.
	* aclocal.in: Typo in comment.

2005-07-09  Zack Weinberg  <zack@codesourcery.com>  (tiny change)

	* lib/depcomp: Handle "#line" markers as well as "# " markers in
	"cpp" style, so it can work with newer HP compilers (for their
	ia64 systems).

2005-07-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Public macros) <AM_WITH_DMALLOC>: Reword to
	fix an underful hbox.
	* lib/INSTALL, lib/config.guess, lib/config.sub, lib/texinfo.tex:
	New upstream versions.

2005-07-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/python.m4 (_AM_PYTHON_INTERPRETER_LIST): Add python2.5.

2005-06-30  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (make_paragraphs): Do not define %TOPDIR%, now that
	lib/am/header-vars.am no longer uses it.
	* lib/am/libtool.am (distclean-am, distclean-libtool): Define
	if TOPDIR_P is true, not TOPDIR.
	Suggested by Stepan Kasal.

	* automake.in (read_am_file): Correctly diagnose comments following
	trailing backslash.
	* tests/commen10.test: New file.
	* tests/Makefile.am (TESTS): Add commen10.test.
	Report from Harald Dunkel.

	* automake.in (scan_autoconf_traces): Scan AC_SUBST_TRACE instead
	of AC_SUBST.
	* lib/am/header-vars.am (srcdir, top_srcdir, top_builddir, INSTALL):
	Do not define, they are AC_SUBST_TRACEd by Autoconf.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Require Autoconf 2.59c.
	* tests/include.test: Call AC_OUTPUT.

2005-06-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/mkinstalldirs: Fix support for directory name with spaces if
	`mkdir -p' does not work.
	* tests/Makefile.am (TESTS): Add mkinst3.test.
	* tests/mkinst3.test: New file.