@@ -1,3 +1,7 @@
+2005-07-19  Stepan Kasal  <kasal@ucw.cz>
+
+	* Makefile.am (automake, aclocal): Merge the rules.
+
 2005-07-10  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
